Fix scroll on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html,
+body {
+	overflow: hidden;
+	overscroll-behavior: none;
+}
+
 body {
 	margin: 0;
 }
